Fix fork history spacing

--- a/client/scss/_forkHistoryVis.scss
+++ b/client/scss/_forkHistoryVis.scss
@@ -3,7 +3,7 @@
 .history-vis {
   display: flex;
   align-items: center;
-  /*margin: 20px;*/
+  margin: 10px 0 20px 0;
   * {
     display: flex;
     align-items: center;
